Kevin fixed {bz: 1264} lists in richtext mode on ie in s3.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@9972 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/wikiwyg.css
+++ b/nlw/share/skin/s3/css/wikiwyg.css
@@ -8,6 +8,30 @@ table {
     border: 1px solid black;
 }
 
+ol, ul {
+    padding-left: 25px;
+}
+
+ol {
+    list-style: decimal outside none;
+}
+
+ul {
+    list-style: disc outside none;
+}
+
+ul ul, ol ul {
+    list-style-type: circle;
+}
+
+ol ol ul, ol ul ul, ul ol ul, ul ul ul {
+    list-style-type: square;
+}
+
+li {
+    padding: 3px 0px;
+}
+
 td {
     border: 1px solid black;
     padding: 1px;
